gzhou 17-iptables
################################################################################################
gzhou 12

# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-INPUT -i eth0 -j ACCEPT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -p 50 -j ACCEPT
-A RH-Firewall-1-INPUT -p 51 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 161 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp -s 114.112.62.101 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp -s 54.251.240.153 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m multiport -p tcp --dport 9000,9001 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp -s 192.168.200.0/27 -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-INPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 192.168.200.0/24 -j ACCEPT 


-A RH-Firewall-1-OUTPUT -i eth0 -j ACCEPT
-A RH-Firewall-1-OUTPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-OUTPUT -i lo -j ACCEPT
-A RH-Firewall-1-OUTPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 50 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 51 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp -m udp --dport 161 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp -s 114.112.62.101 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp -s 54.251.240.153 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m multiport -p tcp --dport 9000,9001 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp -s 192.168.200.0/27 -j ACCEPT
-A RH-Firewall-1-OUTPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-OUTPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-OUTPUT -s 192.168.200.0/24 -j ACCEPT

COMMIT

################################################################################################
gzhou 13
# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -p 50 -j ACCEPT
-A RH-Firewall-1-INPUT -p 51 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 161 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp -s 192.168.200.0/27 -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-INPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 192.168.200.0/24 -j ACCEPT 
-A RH-Firewall-1-INPUT -i eth1 -j ACCEPT

-A RH-Firewall-1-OUTPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 50 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 51 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-OUTPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-OUTPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-OUTPUT -s 192.168.200.0/24 -j ACCEPT

COMMIT

################################################################################################
gzhou 14
# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -p 50 -j ACCEPT
-A RH-Firewall-1-INPUT -p 51 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 161 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp -s 192.168.200.0/27 -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-INPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 192.168.200.0/24 -j ACCEPT 
-A RH-Firewall-1-INPUT -i eth1 -j ACCEPT

-A RH-Firewall-1-OUTPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 50 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 51 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-OUTPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-OUTPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-OUTPUT -s 192.168.200.0/24 -j ACCEPT

COMMIT

################################################################################################
gzhou 15

# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-INPUT -i eth0 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -p 50 -j ACCEPT
-A RH-Firewall-1-INPUT -p 51 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-INPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 192.168.200.0/24 -j ACCEPT 

-A RH-Firewall-1-OUTPUT -i eth0 -j ACCEPT
-A RH-Firewall-1-OUTPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 50 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 51 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-OUTPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-OUTPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-OUTPUT -s 192.168.200.0/24 -j ACCEPT

COMMIT


################################################################################################
gzhou 16

# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -p 50 -j ACCEPT
-A RH-Firewall-1-INPUT -p 51 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-INPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 192.168.200.0/24 -j ACCEPT 

-A RH-Firewall-1-OUTPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 50 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p 51 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p udp -m udp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-OUTPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-OUTPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-OUTPUT -j REJECT --reject-with icmp-host-prohibited
-A RH-Firewall-1-OUTPUT -s 203.187.177.128/27 -j ACCEPT 
-A RH-Firewall-1-OUTPUT -s 192.168.200.0/24 -j ACCEPT

COMMIT


################################################################################################
gzhou 17


# Generated by iptables-save v1.4.7 on Mon Jan 19 17:45:39 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -s 203.187.177.128/27 -j ACCEPT 
-A INPUT -s 192.168.200.0/24 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1080 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 203.187.177.128/27 -j ACCEPT 
-A OUTPUT -s 192.168.200.0/24 -j ACCEPT 

COMMIT









iptables -A INPUT -s 203.187.177.128/27 -j ACCEPT
iptables -A INPUT -s 192.168.200.0/24 -j ACCEPT 

iptables -A OUTPUT -s 203.187.177.128/27 -j ACCEPT
iptables -A OUTPUT -s 192.168.200.0/24 -j ACCEPT
