iptablessssss
################################################################################################
IDC 56

# Generated by iptables-save v1.3.5 on Tue Jan 13 10:20:30 2015
*nat
:PREROUTING ACCEPT [30106426:2345780330]
:POSTROUTING ACCEPT [868961:53982544]
:OUTPUT ACCEPT [868963:53982707]
-A POSTROUTING -s 192.168.122.0/255.255.255.0 -d ! 192.168.122.0/255.255.255.0 -p tcp -j MASQUERADE --to-ports 1024-65535 
-A POSTROUTING -s 192.168.122.0/255.255.255.0 -d ! 192.168.122.0/255.255.255.0 -p udp -j MASQUERADE --to-ports 1024-65535 
-A POSTROUTING -s 192.168.122.0/255.255.255.0 -d ! 192.168.122.0/255.255.255.0 -j MASQUERADE 
COMMIT
# Completed on Tue Jan 13 10:20:30 2015
# Generated by iptables-save v1.3.5 on Tue Jan 13 10:20:30 2015
*filter
:INPUT DROP [19:8375]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [788:147349]
-A INPUT -s 203.187.177.128/255.255.255.224 -j ACCEPT 
-A INPUT -s 192.168.100.0/255.255.255.0 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
COMMIT



# Generated by iptables-save v1.3.5 on Fri Dec 19 23:44:39 2014
*nat
:PREROUTING ACCEPT [2152:212957]
:POSTROUTING ACCEPT [2110:148396]
:OUTPUT ACCEPT [2110:148396]
-A POSTROUTING -s 10.8.0.0/255.255.255.0 -o eth1 -j MASQUERADE 
COMMIT
# Completed on Fri Dec 19 23:44:39 2014
# Generated by iptables-save v1.3.5 on Fri Dec 19 23:44:39 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [21185:4477947]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT 
-A FORWARD -j RH-Firewall-1-INPUT 
-A RH-Firewall-1-INPUT -i lo -j ACCEPT 
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A RH-Firewall-1-INPUT -p esp -j ACCEPT 
-A RH-Firewall-1-INPUT -p ah -j ACCEPT 
-A RH-Firewall-1-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A RH-Firewall-1-INPUT -s 203.187.177.128/255.255.255.224 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 101.251.195.32/255.255.255.224 -m state --state NEW -j ACCEPT 
-A RH-Firewall-1-INPUT -s 113.105.249.0/255.255.255.224 -m state --state NEW -j ACCEPT 
-A RH-Firewall-1-INPUT -s 113.105.249./255.255.255.0 -m state --state NEW -j ACCEPT 
-A RH-Firewall-1-INPUT -s 10.8.0.0/255.255.255.0 -m state --state NEW -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m multiport --dports 80,8801,8005,8009,8084,8567 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 9002 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 9005 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 9009 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 192.168.100.0/255.255.255.0 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 203.187.177.128/255.255.255.224 -j ACCEPT 
-A RH-Firewall-1-INPUT -s 119.254.12.32/255.255.255.224 -j ACCEPT 
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT



首都在线虚拟机


:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 80-j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -s 203.187.177.128/27 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -s 10.10.10.0/24 -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT



cat /etc/sysconfig/iptables


cp /etc/sysconfig/iptables /etc/sysconfig/iptables.new
vim /etc/sysconfig/iptables.new 


-A OUTINPUT -s 192.168.100.0/255.255.255.0 -j ACCEPT              
-A OUTINPUT -s 203.187.177.128/255.255.255.224 -j ACCEPT              
-A OUTINPUT -s 119.254.12.32/255.255.255.224 -j ACCEPT
